<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <ImageButton
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/close"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo">
        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_email"
            android:fontFamily="@font/bmhanna_air"
            android:layout_marginTop="80dp"
            android:layout_marginStart="30dp"
            android:textSize="18sp"
            android:textColor="#c3c3c3">
        </TextView>

        <FrameLayout
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:background="#c3c3c3"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:textSize="18sp"
            android:textColor="#c3c3c3">
        </TextView>

        <FrameLayout
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:background="#c3c3c3"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

        </FrameLayout>

        <android.widget.Button
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:background="@drawable/login"
            android:text="@string/login"
            android:fontFamily="@font/bmhanna_air"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"
            android:layout_gravity="center">
        </android.widget.Button>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_id"
                android:fontFamily="@font/font_hannaair"
                android:textSize="18sp">

            </TextView>
            
            <View
                android:layout_width="1dp"
                android:layout_height="18dp"
                android:background="#c3c3c3"
                android:layout_marginStart="15dp">

            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_password"
                android:fontFamily="@font/font_hannaair"
                android:textSize="18sp"
                android:layout_marginStart="15dp">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="350dp"
                android:layout_height="35dp"
                android:background="@drawable/white"
                android:text="@string/login_facebook"
                android:drawableStart="@drawable/facebook"
                android:textSize="15sp"
                android:fontFamily="@font/font_hannaair"
                android:textStyle="bold">
            </androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="350dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/white"
                android:text="@string/login_naver"
                android:drawableStart="@drawable/naver"
                android:textSize="15sp"
                android:fontFamily="@font/font_hannaair"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry">
            </androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="350dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/white"
                android:text="@string/login_apple"
                android:drawableStart="@drawable/apple"
                android:textSize="15sp"
                android:fontFamily="@font/font_hannaair"
                android:textStyle="bold">
            </androidx.appcompat.widget.AppCompatButton>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_visit"
                    android:fontFamily="@font/font_hannaair"
                    android:textSize="15sp">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/bm"
                    android:fontFamily="@font/font_hannaair"
                    android:textSize="15sp">
                </TextView>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>