<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bm_gray">
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/zzim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/back_resize"
            android:fontFamily="@font/font_dohyeon"
            android:text="@string/bm_zzim"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

        <ImageButton
            android:id="@+id/zzim_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@drawable/home_resize"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/zzim"
            app:layout_constraintTop_toTopOf="@+id/zzim"
            app:layout_constraintEnd_toStartOf="@id/zzim_search"
            app:layout_constraintHorizontal_bias="1">

        </ImageButton>

        <ImageButton
            android:id="@+id/zzim_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@color/transparent"
            android:src="@drawable/search_resize"
            app:layout_constraintBottom_toBottomOf="@id/zzim_home"
            app:layout_constraintStart_toEndOf="@+id/zzim_home"
            app:layout_constraintEnd_toStartOf="@id/zzim_bag"
            app:layout_constraintTop_toTopOf="@+id/zzim_home">

        </ImageButton>

        <ImageButton
            android:id="@+id/zzim_bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/transparent"
            android:src="@drawable/bag_resize"
            app:layout_constraintBottom_toBottomOf="@+id/zzim_search"
            app:layout_constraintStart_toEndOf="@+id/zzim_search"
            app:layout_constraintTop_toTopOf="@id/zzim_search"
            app:layout_constraintEnd_toEndOf="parent">

        </ImageButton>

        <LinearLayout
            android:id="@+id/bm_choice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:weightSum="4"
            app:layout_constraintTop_toBottomOf="@id/zzim">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/bm_delivery_package"
                android:layout_weight="1"
                android:fontFamily="@font/font_hannaair"
                android:textColor="@color/gray"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/bm_b_mart"
                android:layout_weight="1"
                android:fontFamily="@font/font_hannaair"
                android:textColor="@color/gray"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/bm_bmstore"
                android:layout_weight="1"
                android:fontFamily="@font/font_hannaair"
                android:textColor="@color/gray"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/bm_shopping_live"
                android:layout_weight="1"
                android:fontFamily="@font/font_hannaair"
                android:textColor="@color/gray"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>
        <View
            android:id="@+id/bm_zzim_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/bm_choice"
            android:layout_marginTop="8dp"
            android:background="@color/gray">
        </View>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@color/transparent"
        android:src="@drawable/zzim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>